# postcommit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: post-writer.md
commands/: post-snooze.md  post.md
docs/: smoke-test.md
docs/vault/: Architecture.md  CLI.md  Data Flow.md  Extractor.md  Hooks.md  Install and Distribution.md  MCP Server.md  Overview.md  Plugin Surface.md  Post-Writer Agent.md  Privacy Model.md  Roadmap.md  Scoring.md  Session Transcripts.md  State.md  Testing and CI.md
hooks/: _adapter.py  hooks.json  postcommit_state.py  session-end.py  session-start.py
postcommit/: __init__.py  __main__.py  cloud_auth.py  cloud_client.py  cloud_config.py  cloud_login.py  extract.py  hooks.py  install.py  scoring.py  serve.py  serve_cloud.py  state.py
postcommit/data/: skill.md
scripts/: link-local.sh  run-tests.sh
skills/postcommit-extract/: SKILL.md
tests/: _support.py  test_adapter.py  test_cli.py  test_cloud_auth.py  test_cloud_client.py  test_cloud_login.py  test_extract.py  test_hook_adapter.py  test_postcommit_state.py  test_serve_cloud.py  test_session_end.py  test_session_start.py
